--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
