Digital input to analog pin

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         google()
         jcenter()
     }
+    tasks.withType(JavaCompile) { options.deprecation = true }
 }
 
 task clean(type: Delete) {
