--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
         <activity android:name=".UCModule"
             android:screenOrientation="portrait"/>
+        <activity android:name=".extra.AboutPage"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
