--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testImplementation "org.powermock:powermock-classloading-xstream:1.6.5"
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
 
 jacoco {
