--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,6 @@ apply plugin: 'jacoco'
 
 
 android {
-    signingConfigs {
-
-    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.kollins.sofia"
@@ -39,25 +36,25 @@ android {
             testCoverageEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
     }
     testOptions {
         unitTests.returnDefaultValues = true
     }
-
+    productFlavors {
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation "com.android.support:support-v4:26+"
+    implementation 'com.android.support:support-v4:26+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
-    testImplementation "org.powermock:powermock-module-junit4:1.6.5"
-    testImplementation "org.powermock:powermock-module-junit4-rule:1.6.5"
-    testImplementation "org.powermock:powermock-api-mockito:1.6.5"
-    testImplementation "org.powermock:powermock-classloading-xstream:1.6.5"
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
+    testImplementation 'org.powermock:powermock-module-junit4-rule:1.6.5'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
+    testImplementation 'org.powermock:powermock-classloading-xstream:1.6.5'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
