--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         applicationId "com.kollins.project.sofia"
         minSdkVersion 21
         targetSdkVersion 29
-        multiDexEnabled true
+//        multiDexEnabled true
         versionCode 14
         versionName "1.12.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
