Define update period for Core notifications

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library( # Sets the name of the library.
             Core/src/main.cpp
             Core/src/SofiaCoreController.cpp
             Core/src/devices/DeviceFactory.cpp
+            Core/src/devices/GenericDevice.cpp
             Core/src/devices/atmega328p/ATMega328P.cpp
             Core/src/devices/components/avr/cpu/AVRCPU.cpp
             Core/src/devices/components/avr/cpu/AVRCPU_AVRe.cpp
